# CRUD-CSV

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
crud-csv/: actions.py  config.py  crud.py  main.py  utils.py
data/: regions.csv
scripts/: format-imports.sh  format.sh  lint.sh
