[tool.poetry]
name = "crud-csv"
version = "0.1.0"
description = "Python program that makes CRUD operations on a CSV file and have support for multiple instances operating in the same file."
authors = ["johannakirchner <idont@know.com>", "guligon90 <guligon90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
